# VTracer

./: .gitignore  CMakeLists.txt  ReadMe.md
SVGtoOBJ/: CMakeLists.txt  README.md
SVGtoOBJ/scripts/: build-msvc.bat
SVGtoOBJ/src/: main.cpp
SVGtoOBJ/tests/: JMM.mtl  smoke.mtl
VTracerMaui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  VTracerMaui.csproj  VTracerMaui.sln
VTracerMaui/Interop/: VTracerNative.cs
VTracerMaui/Models/: SamplePreset.cs
VTracerMaui/Resources/Styles/: Colors.xaml
app/: main.cpp
include/vtracer_cpp/: vtracer.h  vtracer_c_api.h
src/: vtracer.cpp  vtracer_c_api.cpp
